--- a/src/css/Boards.css
+++ b/src/css/Boards.css
@@ -154,9 +154,7 @@ gap: 2rem;
 				display: flex; 
 
 }
-
  
-
 .tasks-board-container-sup-header input[type=checkbox]:hover {
   opacity: 1;
 }
@@ -224,4 +222,29 @@ gap: 2rem;
 	grid-template-columns: 1fr ;
 gap: 2rem;
   }
+}
+
+
+#side-nav-flex-container{
+	display: flex;
+ flex-direction: column; 
+	justify-content: space-between;
+	height: 100%;
+}
+
+.dashboard-back-container-sub{ 
+box-sizing: border-box; 
+display: flex;
+justify-content: center;
+align-items: center;
+padding: 0px;
+gap: 4px;
+margin: 20px; 
+height: 44px; 
+border: 1px solid #475569;
+border-radius: 6px; 
+flex: none;
+order: 1;
+align-self: stretch;
+flex-grow: 0; 
 }
