--- a/src/css/Form.css
+++ b/src/css/Form.css
@@ -22,9 +22,7 @@ input:focus {
 input :hover{ 
   border: 1px solid var(--accent-purple-light) !important; 
 }
-  /* input :focus{ 
-  border: 1px solid var(--accent-blue) !important; 
-} */
+ 
 /* button */
 button {
   display: flex;
@@ -251,6 +249,33 @@ button svg {
 font-weight: 700 !important;
  font-size: 16px !important;
 }
+.bg-blue {
+    background-color: #F0F6FE !important; 
+    color: #0D6EFD;
+    padding: 2px 12px !important;
+    border-radius: 12px !important;
+    font-style: normal !important;
+    font-weight: 700 !important;
+    font-size: 16px !important;
+}
+.bg-green{
+    background-color: #E7F6EC !important; 
+    color: #0F973D;
+    padding: 2px 12px !important;
+    border-radius: 12px !important;
+    font-style: normal !important;
+    font-weight: 700 !important;
+    font-size: 16px !important;
+}
+.bg-yellow{
+    background-color: #FEF4E6 !important; 
+    color: #F58A07;
+    padding: 2px 12px !important;
+    border-radius: 12px !important;
+    font-style: normal !important;
+    font-weight: 700 !important;
+    font-size: 16px !important;
+}
 
 .de-active-h5{
 font-style: normal;
@@ -309,3 +334,51 @@ font-weight: 700;
 .table-msg p {
   color: #7a7a7a; 
 }
+
+
+.md-checkbox {
+	 position: relative;
+	 margin: 1em 0;
+	 text-align: left;
+}
+ .md-checkbox.md-checkbox-inline {
+	 display: inline-block;
+}
+
+.md-checkbox label {
+	 cursor: pointer;
+	 display: inline;
+	 line-height: 1.25em;
+	 vertical-align: top;
+	 clear: both;
+	 padding-left: 1px;
+}
+.md-checkbox label:not(:empty) {
+	 padding-left: 0.75em;
+}
+ .md-checkbox label:before {
+	 width: 1.25em;
+	 height: 1.25em;
+	 background: var(--clr-white);
+	 border: 2px solid rgba(0, 0, 0, 0.54);
+	 border-radius: 0.125em;
+	 cursor: pointer;
+	 transition: background 0.3s;
+}
+
+ .md-checkbox input[type="checkbox"]:checked + label:before {
+	 background: var(--accent-blue);
+	 border: none;
+}
+ .md-checkbox input[type="checkbox"]:checked + label:after {
+	 transform: translate(0.25em, 0.3365384615em) rotate(-45deg);
+	 width: 0.75em;
+	 height: 0.375em;
+	 border: 0.125em solid var(--clr-white);
+	 border-top-style: none;
+	 border-right-style: none;
+}
+ .md-checkbox input[type="checkbox"]:focus + label:before {
+   box-shadow: 0 0 0 0.2em rgba(0, 123, 255, 0.5);
+} 
+
