--- a/src/css/SideNav.css
+++ b/src/css/SideNav.css
@@ -1,18 +1,80 @@
 #side-nav {
-  width: 280px;
+  width: 272px;
   --lft-padding: 2rem !important;
   position: relative !important;
   grid-area: sidenav !important;
-  background: #fff !important;
+  background: #F7F9FC !important;
   border-right: 1px solid #EDEDED;
-  /* z-index: 99 !important;   */
-  display: block;
-  margin: 24px 24px;
+  display: block; 
+  height: 100%;
+}
+
+.Quotes_ml_3{
+  margin-left: 25px;
+}
+#side-nav-flex-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; 
+   height: 100%;
+}
+
+.dashboard-back-container-sub{
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.dashboard-back-container{
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
+
+.actives_dan_Calendar_flex{
+  display: flex;
+  justify-content:space-between;
+  align-items: center; 
+  width: 100%;
+}
+
+.Benson_container h6{  
+font-style: normal;
+font-weight: 700;
+font-size: 12px;
+line-height: 145%; 
+color: #101928;  
+}
+.Benson_container p{  
+font-style: normal;
+font-weight: 400;
+font-size: 11px;
+line-height: 145%; 
+color: #475367;  
+}
+.Benson_container_image{   
+width: 40px;
+height: 40px; 
+border-radius: 50px;
+background-color: #F7F9FC;
+}
+
+.dashboard-back-Support{
+  display: flex;
+  flex-direction: column;
+  gap: 35px;
+}
+
+.Support_float{
+  display: flex;
+  gap: 12px;
+  align-items: center; 
 }
  
-
- 
-
+.logo_container {
+  padding: 50px 0px 5px 24px;
+}
  
 
 #side-nav .user-details {
@@ -59,9 +121,7 @@
   flex-direction: column !important;
   gap: 8px !important;
   padding:  10px ;
-  gap: 1.75rem !important;
-  /* gap: 1.75rem !important;
-  padding: 0 var(--lft-padding) !important; */
+  gap: .8rem !important;  
   margin-top: 1.5rem !important;
 }
 
@@ -93,22 +153,25 @@
 }
 
 #side-nav nav span {
-  font-weight: 600;
-  color: #94A3B8;
-  transition: 100ms ease-in !important;
+  font-weight: 600; 
+  transition: 100ms ease-in !important;  
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 145%;  
+color: var(--text); 
+
 }
 
 #side-nav nav a:hover span {
-  color: var(--accent-blue) !important;
+  color: var(--accent-blue) ;
 }
 
-/* #side-nav nav a.active {
-  border-right: 2px solid var(--accent-blue) !important;
-} */
+ 
 
 #side-nav nav a.active svg,
 #side-nav nav a.active span {
-  color: var(--accent-blue) !important;
+  color: var(--accent-blue)  ;
 }
 
 #side-nav .nav-sub_area {
@@ -118,7 +181,7 @@
 }
 
 #side-nav .nav-sub_area button {
-  background-color: #fff !important;
+  background-color: var(--white) !important;
   border: none;
   outline: none;
   display: flex;
@@ -152,11 +215,11 @@
   padding: 0px .5rem !important;
   margin-left: 0.2rem; 
   transform: rotate(25deg); 
-  color: var(--accent-purple);
+  color: var(--accent-blue);
 }
 .logo-area-img-login{ 
   transform: rotate(25deg); 
-  color: var(--accent-purple);
+  color: var(--accent-blue);
 }
 
 @media only screen and(min-width: 1200px){
